; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_GetAccessModeFromSTGM.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/ole32/extr_storage32.c_GetAccessModeFromSTGM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GENERIC_READ = common dso_local global i32 0, align 4
@GENERIC_WRITE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [22 x i8] c"Invalid access mode!\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @GetAccessModeFromSTGM to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @GetAccessModeFromSTGM(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i32 @STGM_ACCESS_MODE(i32 %4)
  switch i32 %5, label %12 [
    i32 130, label %6
    i32 128, label %8
    i32 129, label %8
  ]

6:                                                ; preds = %1
  %7 = load i32, i32* @GENERIC_READ, align 4
  store i32 %7, i32* %2, align 4
  br label %15

8:                                                ; preds = %1, %1
  %9 = load i32, i32* @GENERIC_READ, align 4
  %10 = load i32, i32* @GENERIC_WRITE, align 4
  %11 = or i32 %9, %10
  store i32 %11, i32* %2, align 4
  br label %15

12:                                               ; preds = %1
  %13 = call i32 @ERR(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @assert(i32 0)
  store i32 0, i32* %2, align 4
  br label %15

15:                                               ; preds = %12, %8, %6
  %16 = load i32, i32* %2, align 4
  ret i32 %16
}

declare dso_local i32 @STGM_ACCESS_MODE(i32) #1

declare dso_local i32 @ERR(i8*) #1

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
